--- a/journal/202103.md
+++ b/journal/202103.md
@@ -428,7 +428,13 @@ https://twitter.com/_Checkmatey_/status/1369769392884436992
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
 
-{ investigate - did Grin have an inflation bug? } https://forum.grin.mw/t/resolved-d-o-n-o-t-u-s-e-g-r-i-n-g-r-i-n-w-a-l-l-e-t-g-r-i-n-i-r-o-n-b-e-l-l-y-u-n-t-i-l-f-u-r-t-h-e-r-n-o-t-i-c-e/8620/53
+March's big DeFi Dumpster Fire was PAID, which was subjected to an infinite minting [attack](https://cointelegraph.com/news/paid-network-exploiter-nets-3-million-in-infinite-mint-attack) that saw the attacker issue $180 million PAID to themselves, but they were apparently only able to capture $3 million of the value by converting it to something other than rapidly devaluing (down 85% at one stage) PAID tokens. In a [postmortem](https://paidnetwork.medium.com/paid-network-attack-postmortem-march-7-2021-9e4c0fef0e07) it was explained that the attacker gained access to the private key for the original contract deployer and used it to "upgrade" the contracts so that they could mint new tokens. A snapshot will be used to "reset" the PAID token to wipe out the attacker's tokens which they were not able to sell before being discovered. 
+
+SushiSwap has been dealing with a major [dilemma](https://decrypt.co/62522/defi-exchange-sushiswap-faces-an-880-million-dilemma) about how to distribute tokens which it owes to liquidity providers from Oct 2020, the tokens had a 6 month "vesting period", and the question of how to distribute them was raised in Jan 2021. SUSHI holders have already voted against a straight airdrop of the tokens and opted for a claiming mechanism which will cost claimants fees, but then it transpired that the smart contract's code had been edited so that it could no longer be claimed by users who interacted with it through third party smart contracts (like Harvest.finance, whose users are owed 5-6% of these tokens). The reason given by the developers who deployed this update is concern that "parasitic farms" will dump their token allocations. The latest is that these farms can submit proposals for how to distribute their allocations, for review by the Sushiswap community.
+
+The Cosmos "inter blockchain communication (IBC)" protocol has been [approved](https://www.coindesk.com/cosmos-vote-approve-inter-blockchain-communication) by Cosmos voters by a whopping majority of 112 million to seventy five, it promises to enable secure communication between blockchains which satisfy certain criteria. As Cosmos is the only blockchain to support this IBC standard it is not currently very useful, but it is likely that other Tendermint based blockchains will add support soon too.
+
+{ investigate - did Grin have an inflation bug? RR: I saw this too but there don't seem to be any stories about it, maybe nobody cares about Grin? } https://forum.grin.mw/t/resolved-d-o-n-o-t-u-s-e-g-r-i-n-g-r-i-n-w-a-l-l-e-t-g-r-i-n-i-r-o-n-b-e-l-l-y-u-n-t-i-l-f-u-r-t-h-e-r-n-o-t-i-c-e/8620/53
 
 Ethereum's ProgPoW tensions have found an [expression](https://twitter.com/_Checkmatey_/status/1366831390424068098) in miners' hashrate which signals 61% opposition and only 14% support as of Feb.
 
@@ -444,9 +450,11 @@ Ethereum's ProgPoW tensions have found an [expression](https://twitter.com/_Chec
 
 { other: regulations, privacy, security, fun }
 
-maybe https://www.coindesk.com/uk-tax-authority-updates-treatment-of-crypto-assets-to-incorporate-staking
+The UK Tax authority has [updated]() its guidance for the treatment of crypto assets to cover staking for the first time - this is to be treated in the same way as mining income is currently treated, but may open the door for future differentiated treatment.
 
 https://www.coindesk.com/youtube-suspends-coindesk
+
+A new method of cashing out cryptocurrency has apparently been popularized in Russia, "buried [treasure](https://www.nasdaq.com/articles/russias-darknet-criminals-have-novel-crypto-cash-out-system%3A-buried-treasure-2021-03-22)", or dead drops of cash to specific coordinates.
 
 { more anti-privacy nonsense from Bitstamp } https://twitter.com/6102bitcoin/status/1367376460214853632
 
