Dev dcrd feedback
Co-authored-by: Dave Collins <dave@davec.name>

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -39,7 +39,7 @@ Merged in master and the upcoming v1.6.2 release:
 
 - only send [fast block](https://github.com/decred/dcrd/pull/2606) announcements to full node peers, and don't send them to lightweight clients that cannot properly handle them. This significantly improves dcrwallet's SPV operation. { how much better? }
 
-Main addition of the month is the new package for handling [standard addresses](https://github.com/decred/dcrd/pull/2610) that is easier to follow and use than the code it replaces. It is also more generic, allowing to add new address types in the future. If you have ever wondered how "scripts" and "addresses" are related, or how "standard" is different from "consensus", check the shiny new [README](https://github.com/decred/dcrd/tree/master/txscript/stdaddr) of the package or follow the examples and comprehensive tests to fully understand how it works. Thanks to all reviewers and welcome to the newcomers - it's always good to get a fresh pair of eyes!
+Main addition of the month is the new package for handling [standard addresses](https://github.com/decred/dcrd/pull/2610) that is easier to follow and use than the code it replaces. It is also more generic, allowing new address types to be added in the future. If you have ever wondered how "scripts" and "addresses" are related, or how "standard" is different from "consensus", check the shiny new [README](https://github.com/decred/dcrd/tree/master/txscript/stdaddr) of the package or follow the examples and comprehensive tests to fully understand how it works. Thanks to all reviewers and welcome to the newcomers - it's always good to get a fresh pair of eyes!
 
 Other merged work:
 
