--- a/journal/202103.md
+++ b/journal/202103.md
@@ -354,6 +354,15 @@ https://www.coindesk.com/crypto-is-banned-in-morocco-but-bitcoin-purchases-are-s
 
 { someone, full bison story pls }
 
+Monde PR’s achievements for March:
+
+- Created & pitched two stories to finance and crypto publications
+- Responded to one request for comment
+- Secured one media interview
+
+News coverage secured by Monde PR:
+- @jy-p appeared on the [Finance Magnates podcast](https://www.financemagnates.com/cryptocurrency/interview/decreds-jake-yocom-piatt-on-bitcoin-blockchain-governance-dcr-more/) talking about Bitcoin, Blockchain Governance, and DCR, syndicated to four news outlets including [Tech Centry](https://techfans.co.uk/decreds-jake-yocom-piatt-on-bitcoin-blockchain-governance-dcr-more/) 
+
 ## Events
 
 Attended:
