--- a/journal/202103.md
+++ b/journal/202103.md
@@ -253,16 +253,17 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 
 { interviews about people }
 
-Community stats as of {date}:
+Community stats as of Apr 2:
 
-- Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
-- GitHub [dcrd](https://github.com/decred/dcrd) stars: {} (+{}), forks: {} (+{})
+- [Twitter](https://twitter.com/decredproject) followers: 43,628 (+706)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 10,797 (+238)
+- [Matrix](https://chat.decred.org/) #general users: 407 (+25)
+- [Discord](https://discord.gg/GJ2GXfz) users: 1,409 (-35)
+- [Telegram](https://t.me/Decred) users: 2,594 (+76)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,460 (+40), views: 179K (+4K)
+- GitHub [dcrd](https://github.com/decred/dcrd) stars: 589 (+5), forks: 255 (+3)
+
+{ link to sm reports }
 
 ## Governance
 
