add more rel ext

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -464,6 +464,8 @@ The Cosmos "inter blockchain communication (IBC)" protocol has been [approved](h
 
 Ethereum's ProgPoW tensions have found an [expression](https://twitter.com/_Checkmatey_/status/1366831390424068098) in miners' hashrate which signals 61% opposition and only 14% support as of Feb.
 
+Ethereum's EIP 1559 has been included in the forthcoming London hard fork, as decided on the Core Developers [call](https://www.youtube.com/watch?v=xWfR-WxjmYg) on Mar 5. EIP 1559 will fundamentally change how transaction fees are calculated and paid, winning the support of most users and developers by promising to significantly improve the user experience. Miners however have signalled [opposition](https://www.coindesk.com/ethereum-improvement-proposal-1559-london-hard-fork) to this change, with over 60% opposing it and only  as it will interfere with one source of revenue for them. [Analysis](https://insights.deribit.com/market-research/miners-will-accept-eip-1559-here-is-why/) from Hasu suggests that miners will go along with it anyway as they can still earn a good profit from block rewards and Miner Extractable Value (MEV), whereas the alternative can be interpreted as an attack on the network and is likely to damage the ETH price (thus miners' bottom line).
+
 { interesting claims in comments, [this](https://twitter.com/iamDCinvestor/status/1366746473535332360) says such signaling is unreliable and [this](https://twitter.com/Tetranode/status/1366818706706165762) predicts a scenario involving DeFi and claims that MakerDAO and AAVE back EIP-1559. I don't have context to understand, we can move this to Mar to cover all that if its interesting }
 
 { @rr: EIP-1559 is not ProgPoW, it changes how fees work. I looked at it too but it's more of a March story, I don't think anything significant happened in Feb but Mar will be juicy }
@@ -479,6 +481,8 @@ Ethereum's ProgPoW tensions have found an [expression](https://twitter.com/_Chec
 The UK Tax authority has [updated]() its guidance for the treatment of crypto assets to cover staking for the first time - this is to be treated in the same way as mining income is currently treated, but may open the door for future differentiated treatment.
 
 https://www.coindesk.com/youtube-suspends-coindesk
+
+Coindesk's YouTube account got [suspended](https://www.coindesk.com/youtube-suspends-coindesk) for about 1 day, after what was apparently a mistaken takedown of their channel.
 
 A new method of cashing out cryptocurrency has apparently been popularized in Russia, "buried [treasure](https://www.nasdaq.com/articles/russias-darknet-criminals-have-novel-crypto-cash-out-system%3A-buried-treasure-2021-03-22)", or dead drops of cash to specific coordinates.
 
