--- a/journal/202103.md
+++ b/journal/202103.md
@@ -384,13 +384,8 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
-
-Upcoming:
-
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{announcements in Events domain}
+- Mar 12-14 - [Hackathon Nayarit 2021](https://decredcommunity.github.io/events/index/20210312.1) - Internet. Decred in Spanish sponsored the hackathon organized by the Ministry of Education of Nayarit. To prepare participants, the Spanish team hosted Blockchain Education training week, consisting of 5 webinars. Hackathon prize pool of $1,000 was divided as follows: $500 for the first place, $300 second place and $200 divided among the rest of the 20 participants that presented final projects. After the hackathon a learning session was made for the winners to learn how to use Decrediton, mobile wallets and a general info on how to store and use crypto. It lasted for 3 hours and winners had a chance to ask questions while receiving their prizes. More details [here](https://decredcommunity.github.io/events/index/20210312.1).
+- Mar 15 - [State of crypto adoption in Morocco](https://decredcommunity.github.io/events/index/20210315.1) - Internet. @arij was invited to an interview with Tony Obiajuru from on \#InsideBlockchain at CryptoTvplus where she told about the state of crypto adoption in Morocco, her work with Decred and about Decred.
 
 ## Media
 
