findings from f2pools PoW Round Up

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -397,7 +397,7 @@ Attended:
 
 Selected articles:
 
-- {}
+- Decred's v1.6.1 release and "User Activated Hard Fork" to decentralize the treasury have been mentioned in f2pool's bi-weekly PoW Round-Up [Mar-09](https://f2pool.io/mining/pow-round-up/20210309-pow-round-up/) and [Mar-23](https://f2pool.io/mining/pow-round-up/20210323-pow-round-up/) issues
 
 Videos:
 
@@ -448,6 +448,8 @@ https://twitter.com/_Checkmatey_/status/1369769392884436992
 ## Relevant External
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
+
+XMR-BTC swaps testing? https://www.reddit.com/r/Monero/comments/m7guf4/let_there_be_swaps_release_03_please_test/
 
 March's big DeFi Dumpster Fire was PAID, which was subjected to an infinite minting [attack](https://cointelegraph.com/news/paid-network-exploiter-nets-3-million-in-infinite-mint-attack) that saw the attacker issue $180 million PAID to themselves, but they were apparently only able to capture $3 million of the value by converting it to something other than rapidly devaluing (down 85% at one stage) PAID tokens. In a [postmortem](https://paidnetwork.medium.com/paid-network-attack-postmortem-march-7-2021-9e4c0fef0e07) it was explained that the attacker gained access to the private key for the original contract deployer and used it to "upgrade" the contracts so that they could mint new tokens. A snapshot will be used to "reset" the PAID token to wipe out the attacker's tokens which they were not able to sell before being discovered. 
 
