--- a/journal/202103.md
+++ b/journal/202103.md
@@ -223,6 +223,12 @@ In progress: Politeia [proposals](https://github.com/planetdecred/godcr/pull/331
 
 In addition to [Google Play](https://play.google.com/store/apps/details?id=com.joegruff.decredaddressscanner) and direct [APK](https://github.com/decred/dcraddrscanner/releases/tag/v1.08) download, the app is now also available on [F-Droid](https://f-droid.org/en/packages/com.decred.decredaddressscanner/)!
 
+<a id="dcrmapper" />
+
+**[Decred Mapper](https://github.com/jholdstock/dcrmapper)**
+
+@jholdstock has released a website with a [map](https://nodes.jholdstock.uk/) of Decred nodes and counts of their [user agents](https://nodes.jholdstock.uk/user_agents). Source code is available [here](https://github.com/jholdstock/dcrmapper). Testnet version of the site is [here](https://testnet-nodes.jholdstock.uk/).
+
 <a id="ticketsplitting" />
 
 **Ticket Splitting**
@@ -328,8 +334,6 @@ yes!
 - https://nodes.jholdstock.uk/user_agents
 - https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$eRv4AVR4bKVNyhGpjO__tZ3HYWPJ32f46txaUIB1lpY
 - 386 shot somewhere please
-- is there an API?
-- is code open?
 
 { maybe } The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%.
 
@@ -496,6 +500,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: davecgh, dnldd, JoeGruff, lukebp, matheusd
+- reviews and feedback: davecgh, dnldd, jholdstock, JoeGruff, lukebp, matheusd
 - title image: {}
 - funding: Decred stakeholders
