--- a/journal/202103.md
+++ b/journal/202103.md
@@ -379,8 +379,6 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 { overview of outreach/communications/marketing/PR activity for past month and any short-term plans }
 
-https://www.coindesk.com/crypto-is-banned-in-morocco-but-bitcoin-purchases-are-soaring - linked and reposted from 10 articles in { fr? }
-
 full bison story pls {
 
 - https://twitter.com/BisonContent
@@ -408,21 +406,21 @@ Attended:
 
 ## Media
 
-{ notable community efforts }
-
-{ ratings news }
-
-{ hint: use the following format: (title in Sentence case) by (author) ([domain](link)) - (optional comment) }
-
 Selected articles:
 
-- Decred’s Jake Yocom-Piatt on Bitcoin, Blockchain Governance, DCR, & More by Rachel McIntosh ([financemagnates.com](https://www.financemagnates.com/cryptocurrency/interview/decreds-jake-yocom-piatt-on-bitcoin-blockchain-governance-dcr-more/))
+- Decred’s Jake Yocom-Piatt on Bitcoin, Blockchain Governance, DCR, & More by Rachel McIntosh ([financemagnates.com](https://www.financemagnates.com/cryptocurrency/interview/decreds-jake-yocom-piatt-on-bitcoin-blockchain-governance-dcr-more/), full audio on [youtube](https://www.youtube.com/watch?v=SOoCbr51sus))
 - What is Decred? by Samuel Sherwood ([exodus.com](https://www.exodus.com/blog/what-is-decred/))
 - Decred's v1.6.1 release and "User Activated Hard Fork" to decentralize the treasury have been mentioned in f2pool's bi-weekly PoW Round-Up [Mar-09](https://f2pool.io/mining/pow-round-up/20210309-pow-round-up/) and [Mar-23](https://f2pool.io/mining/pow-round-up/20210323-pow-round-up/) issues
+- @arij of "cryptocurrency firm Decred" gave commentary to [CoinDesk](https://www.coindesk.com/crypto-is-banned-in-morocco-but-bitcoin-purchases-are-soaring) on the state of crypto adoption in Morocco. This was linked and reposted in ~10 outlets in different languages.
 
 Videos:
 
-- {}
+- Matheus Degiovani Interview Decred in Depth (live) by @elima\_iii ([youtube](https://www.youtube.com/watch?v=O6oIrRsZnMQ)) - new treasury, opcodes, LN and more
+- Decred Staking Tutorial - \[2021 Updated\] by @Exitus ([youtube](https://www.youtube.com/watch?v=olWfTqw16OQ))
+- Exploring Decred and On-Chain Analysis by Real Vision ([realvision.com](https://www.realvision.com/shows/the-interview-crypto/videos/exploring-decred-and-on-chain-analysis/)) - an interview with @Checkmate, you can see a free sample on [YouTube](https://www.youtube.com/watch?v=SLr-XTqPL4s) (mentions the unprecedented migration of BTC away from exchanges since Mar 2020) or the full episode by signing up on the site
+- PTLCs, MRTREEs and Offline LN Payments by @matheusd ([youtube](https://www.youtube.com/watch?v=m1sQGHUKU7I))
+- Decred News Update - $110M Treasury Decentralization, On-Chain Governance Voting, Network ATH & More by @Exitus ([youtube](https://www.youtube.com/watch?v=yX9zfO_2KTo))
+- Decred Price Analysis - 24th March 2021 by Josh Olszewicz of Brave New Coin ([youtube](https://www.youtube.com/watch?v=5UyRni0rjHc)) - _Decred slices and dices!_
 
 Audio:
 
