--- a/journal/202103.md
+++ b/journal/202103.md
@@ -386,6 +386,8 @@ full bison story pls {
 
 }
 
+[@DCRann](https://t.me/DCRann) Telegram channel was created to mirror important announcements and reduce dependency on Twitter.
+
 A reminder for everyone, if you have a good tweet you can propose it for retweeting via @decredproject in the [#media]({}) room.
 
 Monde PR’s achievements for March:
@@ -432,30 +434,22 @@ Translations:
 
 ## Community Discussions
 
-Comm systems news:
-
-- https://t.me/DCRann, more resiliency
-
-{ selected discussed topics, as bullet list or one paragraph per topic }
-
 Selected Reddit posts:
 
 - odd [patterns](https://www.reddit.com/r/decred/comments/lzr2w8/decredbitcoin_chart/) on the price chart
 - a compilation of [rough edges](https://www.reddit.com/r/decred/comments/m3k31o/161_things_ive_learned/) in mixed staking with Decrediton v1.6.1 and how to workaround them
-- Twitter poll [tournament](https://www.reddit.com/r/decred/comments/m618sa/decred_is_in_the_2021_ultimate_crypto_tournament/) (and the irony of pitching it to _Decred_ community)
+- invitation to Twitter poll [tournament](https://www.reddit.com/r/decred/comments/m618sa/decred_is_in_the_2021_ultimate_crypto_tournament/) (and the irony of pitching it to a community obsessed with solid voting tech)
 - notes on [quantum](https://www.reddit.com/r/decred/comments/m6w2ue/q_re_quantum_resistance/) resistance
-- [generating](https://www.reddit.com/r/decred/comments/marjaa/generating_media_for_upcoming_consensus_vote/) media for the latest consensus vote
+- [generating](https://www.reddit.com/r/decred/comments/marjaa/generating_media_for_upcoming_consensus_vote/) media for the latest consensus vote (and challenges of getting the word out)
 - March's last [price talk](https://www.reddit.com/r/decred/comments/mg5hhj/has_anybody_noticed_that_decred_has_finally/) again got pretty intelligent and compared Decred to Python
 
 Selected Twitter discussions:
 
-- https://twitter.com/behindtext/status/1368655110449094657
+- @jy-p on going in the [opposite](https://twitter.com/behindtext/status/1368655110449094657) direction by creating a fairer opt-in financial system
 - @ammarooni [suggests](https://twitter.com/Ammarooni/status/1367655623698096128) to talk about the USD value locked in tickets because it going above 1 billion is quite an achievement
 - @bochinchero has [linked](https://twitter.com/TheBochinchero/status/1375072938106445824) the price rally with rising stake participation, voter turnout and mixing activity, and noted that fungibility is strong when massive:
 
-> Over 43% of the available $DCR supply is now mixed and unspent.
-> 
-> Some argue that opt-in privacy or a transparent ledger can never be truly fungible... I honestly can't think of a rational actor that would willingly accept a currency, but reject half of the circulating coins. ([@TheBochinchero](https://twitter.com/TheBochinchero/status/1375072954493636608))
+> Over 43% of the available $DCR supply is now mixed and unspent. Some argue that opt-in privacy or a transparent ledger can never be truly fungible... I honestly can't think of a rational actor that would willingly accept a currency, but reject half of the circulating coins. ([@TheBochinchero](https://twitter.com/TheBochinchero/status/1375072954493636608))
 
 ## Markets
 
