--- a/journal/202103.md
+++ b/journal/202103.md
@@ -253,17 +253,7 @@ Other:
 
 ## People
 
-{ hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
-
-Welcome to new first time contributors with code merged to master: @tuhalang ([godcr](https://github.com/planetdecred/godcr/commits?author=tuhalang))
-
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
-
-{ welcome new corporate contractors with short intros, if any }
-
-{ updates from existing contractors }
-
-{ interviews about people }
+Welcome to new first time contributors with code merged to master: @tuhalang ([godcr](https://github.com/planetdecred/godcr/commits?author=tuhalang))!
 
 Community stats as of Apr 2:
 
