Net add onchain hashrate distro

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -303,7 +303,7 @@ Politeia Digest [issue 41](https://blockcommons.red/politeia-digest/issue041/) h
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools as of Apr 1: Antpool 37%, Poolin 29%, F2Pool 10%, Easy2mine 8%, Luxor 1.3%, BTC.com 1.3%, Coinmine 0.04%, UUPool 0.04%, unknown 13%.
 
-Distribution of 1,000 blocks [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}. {HOW TO GET THIS ?}
+Distribution of 1,000 blocks [mined](https://miningpoolstats.stream/decred) before Apr 1: Poolin 30%, Antpool 27%, F2Pool 8%, Easy2Mine 4%, Luxor 2%, BTC.com 1.6%, Coinmine 0.1%, unknown 27%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
