--- a/journal/202103.md
+++ b/journal/202103.md
@@ -309,9 +309,9 @@ Distribution of 1,000 blocks [mined](https://miningpoolstats.stream/decred) befo
 
 Hashrate of the previously top UUPool appears to have migrated to Antpool and F2Pool.
 
-**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=klmp5tla-kn1kkwr0&scale=linear&bin=window&axis=time&visibility=true-true) varied between 154.25-221.4 DCR, with 30-day [average](https://dcrstats.com/) at 178.02 DCR (-3.5).
+**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kln9bt1o-kn255ihw&axis=time&visibility=true-true&mode=stepped) varied between 154.25-221.4 DCR, with 30-day [average](https://dcrstats.com/) at 178.02 DCR (-3.5).
 
-The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kljo5q6x-kmyiboay&scale=linear&bin=false&axis=time&visibility=true-true) was 7.12-7.44 million DCR, meaning that 56.14-58.54% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kljo5q6x-kmyiboay&scale=linear&bin=false&axis=time&visibility=true-true) in proof-of-stake.
+The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kln9bt1o-kn255ihw&scale=linear&bin=block&axis=time) was 7.12-7.44 million DCR, meaning that 56.14-58.54% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kln9bt1o-kn255ihw&scale=linear&bin=block&axis=time) in proof-of-stake.
 
 { recap of ticket price action if it was interesting } {How many times do we keep repeating new records ? XD) 
 
