--- a/journal/202103.md
+++ b/journal/202103.md
@@ -301,7 +301,7 @@ Politeia Digest [issue 41](https://blockcommons.red/politeia-digest/issue041/) h
 
 **Hashrate**: March's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kln9bt1o-kn255ihw&scale=linear&bin=block&axis=time) opened at ~410 Ph/s and closed ~496 Ph/s, bottoming at 228 Ph/s and peaking at 620 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools as of Apr 1: Antpool 37%, Poolin 29%, F2Pool 10%, Easy2mine 8%, Luxor 1.3%, BTC.com 1.3%, Coinmine 0.04%, UUPool 0.04%, unknown 13%.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Apr 1: Antpool 37%, Poolin 29%, F2Pool 10%, Easy2mine 8%, Luxor 1.3%, BTC.com 1.3%, Coinmine 0.04%, UUPool 0.04%, unknown 13%.
 
 Distribution of 1,000 blocks [mined](https://miningpoolstats.stream/decred) before Apr 1: Poolin 30%, Antpool 27%, F2Pool 8%, Easy2Mine 4%, Luxor 2%, BTC.com 1.6%, Coinmine 0.1%, unknown 27%.
 
@@ -309,11 +309,9 @@ Distribution of 1,000 blocks [mined](https://miningpoolstats.stream/decred) befo
 
 Hashrate of the previously top UUPool appears to have migrated to Antpool and F2Pool.
 
-**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kln9bt1o-kn255ihw&axis=time&visibility=true-true&mode=stepped) varied between 154.3-221.5 DCR, with 30-day [average](https://dcrstats.com/) at 178.0 DCR (-3.7).
+**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kln9bt1o-kn255ihw&axis=time&visibility=true-true&mode=stepped) varied between 154.3-221.5 DCR, with 30-day [average](https://dcrstats.com/) at 178.0 DCR (-3.7). In the first 3 months of 2021 the ticket price had the highest oscillation since the price algorithm change in 2017, swinging between ~150 and ~220.
 
-The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kln9bt1o-kn255ihw&scale=linear&bin=block&axis=time) was 7.10-7.46 million DCR, meaning that 56.0-58.7% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kln9bt1o-kn255ihw&scale=linear&bin=block&axis=time) in proof-of-stake.
-
-{ recap of ticket price action if it was interesting } {How many times do we keep repeating new records ? XD) 
+The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kln9bt1o-kn255ihw&scale=linear&bin=block&axis=time) was 7.10-7.46 million DCR, meaning that 56.0-58.7% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kln9bt1o-kn255ihw&scale=linear&bin=block&axis=time) in proof-of-stake - again new all-time highs.
 
 **Nodes**: Throughout March there were around 215 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
