Net node versions

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -315,11 +315,9 @@ The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&
 
 **Nodes**: Throughout March there were around 215 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
-yes!
+Node versions as of Apr 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (247 total, dcrd only): v1.6.1 - 32%, v1.6.0 - 32%, v1.5.1 - 10%, v1.5.2 - 8%, v1.7 dev builds - 8%, v1.6 dev builds - 6%, v1.5.0 - 2.4%, v1.6.2 - 1.2%.
 
-- https://nodes.jholdstock.uk/user_agents
-- https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$eRv4AVR4bKVNyhGpjO__tZ3HYWPJ32f46txaUIB1lpY
-- 386 shot somewhere please
+{ 386 shot somewhere please }
 
 { maybe } The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%.
 
