Net tix splitting

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -329,7 +329,7 @@ https://matrix.to/#/!kqBAIpKYUzqYFVHorm:decred.org/$Md2zPEWfJ27wqUtzVmFvGsBUQiiG
 
 @Checkmate shared charts showing increased [transaction](https://twitter.com/_Checkmatey_/status/1372684156908437508) volumes (2021 volume looks even more dramatic when [adjusted](https://twitter.com/_Checkmatey_/status/1369787880776691712) for circulating supply) and how the share of [fees](https://twitter.com/_Checkmatey_/status/1375608621417996288) in the total block reward went from 0.01% to 0.12% since October 2020.
 
-more ticket splitting stats, extract the pngs https://www.reddit.com/r/decred/comments/m547to/not_focusing_on_split_tickets_will_affect_us/gr0in3e/
+@matheusd [shared](https://www.reddit.com/r/decred/comments/m547to/not_focusing_on_split_tickets_will_affect_us/gr0in3e/) charts of split ticket purchases [by month](https://github.com/decredcommunity/wiki/blob/files/files/20210315.1.png) (80 on average, topped at 127 on March 2020) and by the number of [participants](https://github.com/decredcommunity/wiki/blob/files/files/20210315.2.png) (4 is most common).
 
 ## Integrations
 
