--- a/journal/202103.md
+++ b/journal/202103.md
@@ -333,7 +333,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 34 nodes (+
 
 [decred.raqamiya.net](https://decred.raqamiya.net/) VSP announced that it will be shutting down. As of Apr 5 it [had](https://decred.raqamiya.net/stats) 128 active users and 284 total users, 52 live tickets, and over 20K tickets voted since 2017. The VSP featured a custom UI, email notifications on voted tickets, and 4 voting servers in 3 continents. The [home page](https://decred.raqamiya.net/) asks to not buy any new tickets, but live tickets will be supported until all of them are called. Thank you for your service!
 
-https://www.reddit.com/r/decred/comments/lvl8i0/decred_dcr_added_to_the_btc_market/
+[CexZ](https://www.cexz.ca/) exchange [announced](https://twitter.com/_cexz_/status/1366501324536299523) the listing of a DCR/BTC pair and came to [visit](https://www.reddit.com/r/decred/comments/lvl8i0/decred_dcr_added_to_the_btc_market/) r/decred.
 
 { check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
 
