--- a/journal/202103.md
+++ b/journal/202103.md
@@ -427,9 +427,7 @@ SushiSwap has been dealing with a major [dilemma](https://decrypt.co/62522/defi-
 
 The Cosmos "inter blockchain communication (IBC)" protocol has been [approved](https://www.coindesk.com/cosmos-vote-approve-inter-blockchain-communication) by Cosmos voters by a whopping majority of 112 million to seventy five, it promises to enable secure communication between blockchains which satisfy certain criteria. As Cosmos is the only blockchain to support this IBC standard it is not currently very useful, but it is likely that other Tendermint based blockchains will add support soon too.
 
-Ethereum's ProgPoW tensions have found an [expression](https://twitter.com/_Checkmatey_/status/1366831390424068098) in miners' hashrate which signals 61% opposition and only 14% support as of Feb.
-
-Ethereum's EIP 1559 has been included in the forthcoming London hard fork, as decided on the Core Developers [call](https://www.youtube.com/watch?v=xWfR-WxjmYg) on Mar 5. EIP 1559 will fundamentally change how transaction fees are calculated and paid, winning the support of most users and developers by promising to significantly improve the user experience. Miners however have signalled [opposition](https://www.coindesk.com/ethereum-improvement-proposal-1559-london-hard-fork) to this change, with over 60% opposing it and only  as it will interfere with one source of revenue for them. [Analysis](https://insights.deribit.com/market-research/miners-will-accept-eip-1559-here-is-why/) from Hasu suggests that miners will go along with it anyway as they can still earn a good profit from block rewards and Miner Extractable Value (MEV), whereas the alternative can be interpreted as an attack on the network and is likely to damage the ETH price (thus miners' bottom line).
+Ethereum's EIP 1559 has been included in the forthcoming London hard fork, as decided on the Core Developers [call](https://www.youtube.com/watch?v=xWfR-WxjmYg) on Mar 5. EIP 1559 will fundamentally change how transaction fees are calculated and paid, winning the support of most users and developers by promising to significantly improve the user experience. Miners however have [signalled](https://twitter.com/_Checkmatey_/status/1366831390424068098) [opposition](https://www.coindesk.com/ethereum-improvement-proposal-1559-london-hard-fork) to this change, with over 60% opposing it and only  as it will interfere with one source of revenue for them. [Analysis](https://insights.deribit.com/market-research/miners-will-accept-eip-1559-here-is-why/) from Hasu suggests that miners will go along with it anyway as they can still earn a good profit from block rewards and Miner Extractable Value (MEV), whereas the alternative can be interpreted as an attack on the network and is likely to damage the ETH price (thus miners' bottom line).
 
 The UK Tax authority has [updated]() its guidance for the treatment of crypto assets to cover staking for the first time - this is to be treated in the same way as mining income is currently treated, but may open the door for future differentiated treatment.
 
