--- a/journal/202103.md
+++ b/journal/202103.md
@@ -27,11 +27,11 @@ Contents: { sync at the end }
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
 
-## Upgrade Reminder
+## Fork is Coming
 
-{ vote passed, upgrade else stop syncing on around May 7 }
+Consensus vote to enable the new treasury system has [passed](https://explorer.dcrdata.org/agenda/treasury) and the new rules will activate around May 7. Nodes older than v1.6 will stop syncing, so please upgrade to stay on the chain. You can track the days remaining [here](https://voting.decred.org/).
 
-{ mention v1.6.2 }
+The latest release v1.6.2 has fixes for several bugs with VSP staking and mixing, as well as improved SPV operation. See the full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.2), and don't forget to [verify](https://docs.decred.org/advanced/verifying-binaries/) them before installing.
 
 ## Development
 
