People table use slash

--- a/journal/202103.md
+++ b/journal/202103.md
@@ -264,11 +264,11 @@ metric|value|change
 :--|---:|---:
 [Twitter](https://twitter.com/decredproject) followers|43,628|+706
 [Reddit](https://www.reddit.com/r/decred/) subscribers|10,797|+238
-[Matrix](https://chat.decred.org/) #general users|407|+25)
+[Matrix](https://chat.decred.org/) #general users|407|+25
 [Discord](https://discord.gg/GJ2GXfz) users|1,409|-35
 [Telegram](https://t.me/Decred) users|2,594|+76
-[YouTube](https://www.youtube.com/decredchannel) subscribers, views|4,460, 179K|+40, +4K
-GitHub [dcrd](https://github.com/decred/dcrd) stars, forks|589, 255| +5, +3
+[YouTube](https://www.youtube.com/decredchannel) subscribers / views|4,460 / 179K|+40 / +4K
+GitHub [dcrd](https://github.com/decred/dcrd) stars / forks|589 / 255| +5 / +3
 
 Notable activity detected across ~90 [tracked](https://github.com/decredcommunity/social-media-stats) accounts:
 
