--- a/journal/202103.md
+++ b/journal/202103.md
@@ -282,7 +282,7 @@ Notable activity detected across ~90 [tracked](https://github.com/decredcommunit
 - [@Decred_ES](https://twitter.com/Decred_ES) TW got +5% followers (to 1,365)
 - [DECRED BRasil](https://www.facebook.com/groups/decredbrasil/) FB had a noticeable drop in 30-day posts from ~50 to 19
 
-The above is a filtered list of more notable highlights, but you can see a more detailed report for March [here](https://decredcommunity.github.io/social-media-stats/posts/20210407.1) (and Feb [here](https://decredcommunity.github.io/social-media-stats/posts/20210306.1))
+The above are most notable highlights, but you can see a more detailed report for [March](https://decredcommunity.github.io/social-media-stats/posts/20210407.1) and [February](https://decredcommunity.github.io/social-media-stats/posts/20210306.1) in a new dedicated place _(that can finally fit \*all\* my numbers -- @bee)_.
 
 Thanks to Decred ambassadors on all platforms for raising awareness about the project!
 
