--- a/journal/202103.md
+++ b/journal/202103.md
@@ -6,10 +6,10 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 Highlights for March: {
 
-- consensus vote
-- v1.6.2 close
-- politeia mostly rewritten for a scalable and flexible storage backend
-- bison thing maybe
+- The consensus vote to enable the new treasury system has been approved and should activate around May 7, at which point nodes running software older than v1.6 will be forked off the network.
+- v1.6.2 was released in early Apr, it fixes a number of issues with mixing and VSP tickets, as well as improving the stability of SPV nodes, among other improvements.
+- The epic migration of Politeia to a new more flexible and scalable storage back-end, which has been in progress for over a year, is finally complete! 
+- The Decred community have settled on a spirit animal for the project, the majestic Bison!
 
 }
 
