--- a/journal/202103.md
+++ b/journal/202103.md
@@ -4,14 +4,12 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-Highlights for March: {
+Highlights for March:
 
 - The consensus vote to enable the new treasury system has been approved and should activate around May 7, at which point nodes running software older than v1.6 will be forked off the network.
 - v1.6.2 was released in early Apr, it fixes a number of issues with mixing and VSP tickets, as well as improving the stability of SPV nodes, among other improvements.
-- The epic migration of Politeia to a new more flexible and scalable storage back-end, which has been in progress for over a year, is finally complete! 
+- The epic migration of Politeia to a new more flexible and scalable storage back-end, which has been in progress for over a year, is finally complete!
 - The Decred community have settled on a spirit animal for the project, the majestic Bison!
-
-}
 
 Contents:
 
@@ -290,7 +288,7 @@ Thanks to Decred ambassadors on all platforms for raising awareness about the pr
 
 In March the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 11,531 DCR and spent 4,196 DCR - however 3,010 of this was delayed payment for Jan invoices, so the amount paid for Feb invoices was just 1,184 DCR. Using March's daily average DCR/USD rate of $161.01, this is $1.86M received and $676K spent. The USD figures billed for past work are $135K for Feb (at $113.76) and $163K delayed payments for Jan (at $54.25). As of Apr 4, Treasury balance is 663,658 DCR (124 million USD at $187.04).
 
-Three proposals were published in March. 
+Three proposals were published in March.
 
 - The Moderation 2021 [proposal](https://proposals.decred.org/proposals/e1cda44) estimated a budget of $8,800 (maximum $16,500) for the year, and was approved with 93.4% support and turnout of 36%.
 - The Design [proposal](https://proposals.decred.org/proposals/76eba5a) to cover the remainder of 2021 requests a maximum of $58,850, and reported underspending on the previous proposal such that only 60% of its budget was used. Most of the underspend is associated with the identity and visual communication subdomains. Worklog report for the previous proposal was posted [here](https://github.com/decred/dcrdesign/issues/252).
@@ -424,7 +422,7 @@ In March DCR was trading between USD 140.16-180.60 / BTC 0.00275-0.00310. The av
 
 ## Relevant External
 
-March's big DeFi Dumpster Fire was PAID, which was subjected to an infinite minting [attack](https://cointelegraph.com/news/paid-network-exploiter-nets-3-million-in-infinite-mint-attack) that saw the attacker issue $180 million PAID to themselves, but they were apparently only able to capture $3 million of the value by converting it to something other than rapidly devaluing (down 85% at one stage) PAID tokens. In a [postmortem](https://paidnetwork.medium.com/paid-network-attack-postmortem-march-7-2021-9e4c0fef0e07) it was explained that the attacker gained access to the private key for the original contract deployer and used it to "upgrade" the contracts so that they could mint new tokens. A snapshot will be used to "reset" the PAID token to wipe out the attacker's tokens which they were not able to sell before being discovered. 
+March's big DeFi Dumpster Fire was PAID, which was subjected to an infinite minting [attack](https://cointelegraph.com/news/paid-network-exploiter-nets-3-million-in-infinite-mint-attack) that saw the attacker issue $180 million PAID to themselves, but they were apparently only able to capture $3 million of the value by converting it to something other than rapidly devaluing (down 85% at one stage) PAID tokens. In a [postmortem](https://paidnetwork.medium.com/paid-network-attack-postmortem-march-7-2021-9e4c0fef0e07) it was explained that the attacker gained access to the private key for the original contract deployer and used it to "upgrade" the contracts so that they could mint new tokens. A snapshot will be used to "reset" the PAID token to wipe out the attacker's tokens which they were not able to sell before being discovered.
 
 SushiSwap has been dealing with a major [dilemma](https://decrypt.co/62522/defi-exchange-sushiswap-faces-an-880-million-dilemma) about how to distribute tokens which it owes to liquidity providers from Oct 2020, the tokens had a 6 month "vesting period", and the question of how to distribute them was raised in Jan 2021. SUSHI holders have already voted against a straight airdrop of the tokens and opted for a claiming mechanism which will cost claimants fees, but then it transpired that the smart contract's code had been edited so that it could no longer be claimed by users who interacted with it through third party smart contracts (like Harvest.finance, whose users are owed 5-6% of these tokens). The reason given by the developers who deployed this update is concern that "parasitic farms" will dump their token allocations. The latest is that these farms can submit proposals for how to distribute their allocations, for review by the Sushiswap community.
 
