--- a/journal/202104.md
+++ b/journal/202104.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – {month} {year}
+# {DRAFT} Decred Journal – April 2021
 
 ![{alt text}](../img/{file.ext} "{hover tooltip text}")
 
@@ -187,7 +187,7 @@ Community stats as of {date}:
 
 ## Governance
 
-In {month} the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using {month}'s daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At {prev month}'s average daily rate of ${n.nn}, the USD figure billed for past work is ${n}K. As of {date}, Treasury balance is {n} DCR ({n} million USD at ${n.nn}).
+In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using April's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At March's average daily rate of ${n.nn}, the USD figure billed for past work is ${n}K. As of {date}, Treasury balance is {n} DCR ({n} million USD at ${n.nn}).
 
 { high level recap of decision-making activity and most important events }
 
@@ -201,7 +201,7 @@ Politeia Digest [issue {}]({}) and [issue {}]({}) have more details on the month
 
 { section hint: use the same `zoom` parameter for all dcrdata links }
 
-**Hashrate**: {month}'s [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: April's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
 
@@ -215,7 +215,7 @@ The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&
 
 { recap of ticket price action if it was interesting }
 
-**Nodes**: Throughout {month} there were around {n} reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
+**Nodes**: Throughout April there were around {n} reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
 Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) ({} total, dcrd only): { vX.Y.Z  n%, ... }
 
@@ -309,7 +309,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In {month} DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
+In April DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
@@ -329,7 +329,7 @@ In {month} DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. 
 
 ## About This Issue
 
-This is issue {number} of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
+This is issue 37 of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of the Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
