--- a/journal/202104.md
+++ b/journal/202104.md
@@ -197,11 +197,13 @@ Community stats as of {date}:
 
 ## Governance
 
-In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using April's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At March's average daily rate of ${n.nn}, the USD figure billed for past work is ${n}K. As of {date}, Treasury balance is {n} DCR ({n} million USD at ${n.nn}).
+In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,949 DCR and spent 984 DCR. Using April's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At March's average daily rate of ${n.nn}, the USD figure billed for past work is ${n}K. As of May 2, Treasury balance is 672,768 DCR (140 million USD at $208.13).
 
 { high level recap of decision-making activity and most important events }
 
-- {}
+- A new [proposal](https://proposals.decred.org/record/91cfcc8) for funding Politeia development accompanied the deployment of v1.0.0. This proposal requests a maximum budget of $118K to cover a range of new features, expected to be delivered over a six month period. The features on this roadmap include email-free accounts, extra metadata for proposals, and proposal author updates.
+- The Video production phase 3 [proposal](https://proposals-archive.decred.org/proposals/95a1409) was approved with 98% approval and voter participation of 40%.
+- The Design domain [proposal](https://proposals-archive.decred.org/proposals/76eba5a) for remainder of 2021 was approved with 97% approval and voter participation of 28%.
 
 { check https://github.com/decredcommunity/proposals/commits/master for updates }
 
