--- a/journal/202104.md
+++ b/journal/202104.md
@@ -76,7 +76,17 @@ Release [v1.6.3](https://github.com/decred/decrediton/tree/release-v1.6%2B) is b
 
 **[Politeia](https://github.com/decred/politeia)**
 
-- https://github.com/decred/politeia/releases/tag/v1.0.0
+- list [proposals](https://github.com/decred/politeiagui/pull/2340) from [proposals-archive.decred.org](https://proposals-archive.decred.org/) on the new version
+- [verify](https://github.com/decred/politeia/pull/1377) comment and vote bundles in the `politeiaverify` tool
+- add Unix [timestamp](https://github.com/decred/politeia/pull/1395) to cast votes { is there no temporal batching due to tstore now? does it lower privacy? }
+- list registration fee in the [history](https://github.com/decred/politeiagui/pull/2322) of purchases
+- ~24 bugs discovered in the new version have been fixed
+
+Politeia v1.0.0 has been released including the new tstore backend, v2 API, new plugin architecture and 5 plugins. Read the [release notes](https://github.com/decred/politeia/releases/tag/v1.0.0) for full details on each feature.
+
+The new version has been deployed at [proposals.decred.org](https://proposals.decred.org/).
+
+Check the new [proposal](https://proposals.decred.org/record/91cfcc8) to learn about the development roadmap and budget.
 
 <a id="vspd" />
 
