--- a/journal/202104.md
+++ b/journal/202104.md
@@ -92,13 +92,9 @@ Check the new [proposal](https://proposals.decred.org/record/91cfcc8) to learn a
 
 **[vspd](https://github.com/decred/vspd)**
 
-- {}
-
-<a id="dcrstakepool" />
-
-**[dcrstakepool](https://github.com/decred/dcrstakepool)**
-
-- {}
+- added [parser](https://github.com/decred/vspd/pull/238) for `blockconnected` notification to remove a dependency
+- upgraded [dependencies](https://github.com/decred/vspd/pull/239)
+- removed an unnecessary [check](https://github.com/decred/vspd/pull/241) as a step to improve [database](https://github.com/decred/vspd/issues/223) performance
 
 <a id="dcrpool" />
 
