--- a/journal/202104.md
+++ b/journal/202104.md
@@ -100,7 +100,7 @@ Check the new [proposal](https://proposals.decred.org/record/91cfcc8) to learn a
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-- {}
+- [improved](https://github.com/decred/dcrpool/pulls?q=is%3Apr+merged%3A2021-04-01..2021-04-30+sort%3Aupdated-asc) connectivity and [miner](https://github.com/decred/dcrpool/pull/319) handling
 
 <a id="dcrlnd" />
 
