--- a/journal/202104.md
+++ b/journal/202104.md
@@ -106,13 +106,7 @@ Check the new [proposal](https://proposals.decred.org/record/91cfcc8) to learn a
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
-- {}
-
-<a id="cspp" />
-
-**[cspp](https://github.com/decred/cspp)**
-
-- {}
+- support [unlocking](https://github.com/decred/dcrlnd/pull/136) a specific account (for Decrediton)
 
 <a id="dcrdex" />
 
