--- a/journal/202104.md
+++ b/journal/202104.md
@@ -141,7 +141,11 @@ Check the new [proposal](https://proposals.decred.org/record/91cfcc8) to learn a
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+- show Politeia [proposals](https://github.com/planetdecred/godcr/pull/331)
+- polished UI on [Transactions](https://github.com/planetdecred/godcr/pull/356), [Wallet](https://github.com/planetdecred/godcr/pull/355), and [Receive](https://github.com/planetdecred/godcr/pull/354) pages
+- show USD equivalent on the [nav bar](https://github.com/planetdecred/godcr/pull/380) and on the [Send](https://github.com/planetdecred/godcr/pull/371) confirmation popup
+- added sending to own [account](https://github.com/planetdecred/godcr/pull/353)
+- numerous smaller UX tweaks
 
 <a id="dcrdata" />
 
