--- a/journal/202104.md
+++ b/journal/202104.md
@@ -164,7 +164,7 @@ Check the new [proposal](https://proposals.decred.org/record/91cfcc8) to learn a
 
 { hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
 
-Welcome to new first time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ...
+Welcome to new first time contributors with code merged to master: @LasTshaMAN ([dcrdex](https://github.com/decred/dcrdex/pull/1073))
 
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
 
