--- a/journal/202104.md
+++ b/journal/202104.md
@@ -205,7 +205,7 @@ Politeia Digest [issue {}]({}) and [issue {}]({}) have more details on the month
 
 **Hashrate**: April's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kmvlwq6x-ko7rp8zy&scale=linear&bin=block&axis=time) opened at ~464 Ph/s and closed ~429 Ph/s, bottoming at 219 Ph/s and peaking at 587 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on May 1: Poolin 34.75%, Antpool 27.67%, F2Pool 17.81%, Easy2mine 3.89%, BTC.com 1.76%, Luxor 1.31%, UUPool 0.086%, Coinmine 0.063%, Huobipool 0.024%, Other 12.6%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
@@ -213,15 +213,15 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 
 https://www.reddit.com/r/decred/comments/mvk976/network_hashrate_plummeting/
 
-**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom={t1}-{t2}&axis=time&visibility=true-true&mode=stepped) varied between {n.n}-{n.n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}). { use same t1-t2 for zoom }
+**Staking**: [Ticket price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kmv7w940-ko7df59q&scale=linear&bin=window&axis=time&visibility=true-false) varied between 163.49-204.1 DCR, with 30-day [average](https://dcrstats.com/) at 185.83 DCR (+7.83).
 
-The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) in proof-of-stake.
+The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kmvltoqc-ko7rp3w3&scale=linear&bin=block&axis=time&visibility=true-false) was 7.1-7.5 million DCR, meaning that 55.4-58.4% of the circulating supply [participated](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kmvmb2ag-ko7s6soq&scale=linear&bin=block&axis=time&visibility=true-false) in proof-of-stake.
 
 { recap of ticket price action if it was interesting }
 
-**Nodes**: Throughout April there were around {n} reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
+**Nodes**: Throughout April there were around ~210 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
-Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) ({} total, dcrd only): { vX.Y.Z  n%, ... }
+Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) ({} total, dcrd only): { vX.Y.Z  n%, ... } {Do we have this data ?}
 
 { maybe } The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
 
