--- a/journal/202104.md
+++ b/journal/202104.md
@@ -317,7 +317,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In April DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
+In April DCR was trading between USD 169.5-243.7 / BTC 0.03136-0.00402. The average daily rate was $198.60.
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
