Dev feedback from lukebp

--- a/journal/202104.md
+++ b/journal/202104.md
@@ -78,9 +78,10 @@ Release [v1.6.3](https://github.com/decred/decrediton/tree/release-v1.6%2B) is b
 
 - list [proposals](https://github.com/decred/politeiagui/pull/2340) from [proposals-archive.decred.org](https://proposals-archive.decred.org/) on the new version
 - [verify](https://github.com/decred/politeia/pull/1377) comment and vote bundles in the `politeiaverify` tool
-- add Unix [timestamp](https://github.com/decred/politeia/pull/1395) to cast votes { is there no temporal batching due to tstore now? does it lower privacy? }
 - list registration fee in the [history](https://github.com/decred/politeiagui/pull/2322) of purchases
 - ~24 bugs discovered in the new version have been fixed
+
+One notable change is the addition of [timestamps](https://github.com/decred/politeia/pull/1395) to cast votes. In Git backend precise timestamps were not stored to improve voter privacy and it was only possible to determine if a vote was cast within a ~60 min period. In tstore backend timestamp is already being recorded by Trillian and this cannot be disabled without writing a custom Trillian implementation. Because vote timestamp is now public data anyway, adding it directly to the vote structure allows dcrdata to obtain it much easier (to build its vote [graphs](https://dcrdata.decred.org/proposal/video-content-production-for-decred-phase-3)). But it also means a bit lower privacy for people casting all their votes at once. People who want to protect their privacy are strongly advised to use `politeiavoter`'s [trickling feature](https://github.com/decred/politeia/blob/master/politeiawww/cmd/politeiavoter/README.md#privacy-considerations).
 
 Politeia v1.0.0 has been released including the new tstore backend, v2 API, new plugin architecture and 5 plugins. Read the [release notes](https://github.com/decred/politeia/releases/tag/v1.0.0) for full details on each feature. The new version has been deployed at [proposals.decred.org](https://proposals.decred.org/).
 
@@ -349,6 +350,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: davecgh, jholdstock
+- reviews and feedback: davecgh, jholdstock, lukebp
 - title image: {}
 - funding: Decred stakeholders
